--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">郊外にある、歴史も古い小学校・・・<br>
-            いつの間にか、放課後に家庭科室から奇妙な叫び声が聞こえてくるという噂が流れ始めた。<br>
-            調査したが、噂の出どころはわからない。<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと家庭科室が原因で、学校が滅びるだろう」と予言。<br>
-            生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
-            ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
+          <p class="text-center">ここは国立電機学園・・・<br>
+            学校の設備がLOTによって管理されており、IT関連の勉強をしにくる生徒も多い…<br>
+            だがしかしッ！それは表の顔…裏の顔は天才ホワイトハッカー組織「カタクリズム」のために作られた学校だったッ！<br>
+            そんな日々、世界の平和を陰ながら守っているカタクリズムに問題がッ!?<br>
+            ーとある昼下がりー<br>
+            生徒たちは何の変哲もない日々を過ごしていた…<br>
+            すると突然！電気が消え、ドアに鍵がかかったッ！<br>
+            どうする、我らの「カタクリズム」ッ！
             さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
