--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">ここは国立電機学園・・・<br>
+          <p class="text-center">こんにちわ国立電機学園・・・<br>
             学校の設備がLOTによって管理されており、IT関連の勉強をしにくる生徒も多い…<br>
             だがしかしッ！それは表の顔…裏の顔は天才ホワイトハッカー組織「カタクリズム」のために作られた学校だったッ！<br>
             そんな日々、世界の平和を陰ながら守っているカタクリズムに問題がッ!?<br>
