--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
             ーとある昼下がりー<br>
             生徒たちは何の変哲もない日々を過ごしていた…<br>
             すると突然！電気が消え、ドアに鍵がかかったッ！<br>
-            どうする、我らの「カタクリズム」ッ！
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
+            どうする、我らの「カタクリズム」ッ！！<br>
+          さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
               <li>30分を超えるとS先生は出てこられない</li>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
@@ -48,7 +47,7 @@
               <li>30分を超えるとS先生は出てこられない</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
+          <p class="text-center">学校から解放せよ！！<br>
             まずはこの暗号を解かなくては！</p>
         </div>
       </div>
