--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="card">
               <h3 class="card__title">よく考えて！</h3>
               <p class="card__content">本ゲームでは出題された問題を参考に謎解きをします。<br>
-                問題n問題の答えを3回間違えると、解いている問題ごとに失敗エンディングが見られます。<br>
+                問題に正解すると先へ進み、また、3回間違えると解いている問題ごとに失敗エンディングが見られます。<br>
                 ※何度でも挑戦できるので、諦めず挑戦しましょう。</p>
             </div>
           </div>
