--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -110,10 +110,10 @@
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">時には誰かと一緒に！</h3>
+              <h3 class="card__title">ときには誰かと一緒に！</h3>
               <p class="card__content">遠くにいる仲間とコミュニケーションツールを使って遊ぶのもOK！<br>
-                カメラをオンにしてみんなでわいわいプレイ！<br>
-                解けた謎の答えや思いついたことはなんでも共有しましょう！</p>
+                近くにいるお友達も呼んでみよう！<br>
+                解けた謎の答えや思いついたことはなんでも共有してみましょう！</p>
             </div>
           </div>
         </div>
