--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/問題1.png"alt="">
+                <img src="assets/images/問題1.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
@@ -85,9 +85,11 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">家庭科室の扉が開いた！<br>
-                さぁ先生を助けるため<br>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
+              <div class="clear-message__content">教室から抜け出せた「カタクリズム」！<br>
+                しかし機能が停止、及び暴走した学校の設備の話が聞こえてきた。<br>
+                なんとボイラーが爆発寸前！？<br>
+                一刻も早く止めな帰れば死傷者が出てしまうッ！<br>
+              「カタクリズム」、速急にガスと水道を止めるんだ！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -107,11 +109,11 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
-            </div>
-          </div>
+              <p class="text-center">危機一髪、なんとか止めることができたようだ！<br>
+                中央玄関のプロダクトキーは格部屋に隠された暗号を解くことで入手することができる。<br>
+                しかし未だ照明が点かない、このままでは生徒達の士気が下がり、精神が弱ってしまう…</p>
+            そして科学クラブ所属の生徒より、冷蔵庫を復旧させなければ理科室がヤバいとのこと…<br>
+            電源の制御権を直ちに奪還せよ！</div>
           <div class="stage-column__container section bg-color--keycolor">
             <div class="container">
               <h2 class="section-title"><span class="section-title__stage">STAGE：2</span>キーワードを入力</h2>
