--- a/main.html
+++ b/main.html
@@ -88,7 +88,7 @@ Youtube貼り付けここまで -->
               <div class="clear-message__content">教室から抜け出せた「カタクリズム」！<br>
                 しかし機能が停止、及び暴走した学校の設備の話が聞こえてきた。<br>
                 なんとボイラーが爆発寸前！？<br>
-                一刻も早く止めな帰れば死傷者が出てしまうッ！<br>
+                一刻も早く止めなければ死傷者が出てしまうッ！<br>
               「カタクリズム」、速急にガスと水道を止めるんだ！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
