--- a/main.html
+++ b/main.html
@@ -112,7 +112,7 @@ Youtube貼り付けここまで -->
               <p class="text-center">危機一髪、なんとか止めることができたようだ！<br>
                 中央玄関のプロダクトキーは格部屋に隠された暗号を解くことで入手することができる。<br>
                 しかし未だ照明が点かない、このままでは生徒達の士気が下がり、精神が弱ってしまう…</p>
-            そして科学クラブ所属の生徒より、冷蔵庫を復旧させなければ理科室がヤバいとのこと…<br>
+            そして科学クラブ所属の生徒より、冷蔵庫を復旧させなければ理科室がヤバいとのこと…</p>
             電源の制御権を直ちに奪還せよ！</div>
           <div class="stage-column__container section bg-color--keycolor">
             <div class="container">
