--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
             <p class="text-center">まずはこの教室から出なければ…<br>
               ドアの鍵を開け、生徒解放への第一歩を踏み出せ！！</p>
-            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
+            <p class="text-center">必ず"ひらがな"で入力し、困ったときはヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
               <figure class="image__container">
