--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/top-image.png" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ"></h1>
+    <h1 class="main-title"><img src="assets/images/学校イメージmk２.png" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
@@ -43,7 +43,15 @@
               <li></li>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-             <li></li>
+             <li>ここは国立電機学園・・・<br>
+            学校の設備がLOTによって管理されており、IT関連の勉強をしにくる生徒も多い…<br>
+            だがしかしッ！それは表の顔…裏の顔は天才ホワイトハッカー組織「カタクリズム」のために作られた学校だったッ！<br>
+            そんな日々、世界の平和を陰ながら守っているカタクリズムに問題がッ!?<br>
+            ーとある昼下がりー<br>
+            生徒たちは何の変哲もない日々を過ごしていた…<br>
+            すると突然！電気が消え、ドアに鍵がかかったッ！<br>
+            どうする、我らの「カタクリズム」ッ！！<br>
+          さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p></li>
              <li></li>
             </ul>
           </div>
