--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
           さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li></li>
-          <div class="story__note__outer bg-color--gray">
-            <ul class="story__note">
           <p class="text-center">学校から解放せよ！！<br>
             まずはこの暗号を解かなくては！</p>
         </div>
@@ -117,7 +114,7 @@
     </section>
     <section class="section">
       <div class="container">
-        <a class="btn" href="main.html">準備OK？では、ゲームスタート！！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+        <a class="btn" href="main.html">行け！我らがCATACLYSMッ！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
       </div>
     </section>
   </main>
