--- a/main.html
+++ b/main.html
@@ -109,11 +109,9 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">教室から抜け出せた「カタクリズム」！<br>
-                しかし機能が停止、及び暴走した学校の設備の話が聞こえてきた。<br>
-                なんとボイラーが爆発寸前！？<br>
-                一刻も早く止めなければ死傷者が出てしまうッ！<br>
-              「カタクリズム」、速急にガスと水道を止めるんだ！</div>
+              <p class="text-center">ボイラー爆発の危機ッ！<br>
+　　　　　　　　　　　　　　　　　　　　　　　　　　　　ボイラーを止めないと、爆発し生徒達が巻き込まれ多数の死傷者が出るッ！<br>
+　　　　　　　　　　　　　　　　　　　　　　　　　　　　「カタクリズム」、早急にガスと水道を止めろッ！</div>
           <div class="stage-column__container section bg-color--keycolor">
             <div class="container">
               <h2 class="section-title"><span class="section-title__stage">STAGE：2</span>キーワードを入力</h2>
