--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ボイラーを止めろッ！</h2>
               <p class="text-center">ボイラー爆発の危機ッ！<br>
 　　　　　　　　　　　　　　　　　　　　　　　　　　　　ボイラーを止めないと、爆発し生徒達が巻き込まれ多数の死傷者が出るッ！<br>
 　　　　　　　　　　　　　　　　　　　　　　　　　　　　「カタクリズム」、早急にガスと水道を止めろッ！</div>
@@ -197,12 +197,13 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>電力を復旧せよッ！</h2>
+            <p class="text-center">中央玄関のプロダクトキーは各部屋に隠された暗号を解くことで入手できる...<br>
+　　　　　　　　　　　　　　　　　　　　　　　　　暗いままでは生徒達の士気が下がり、精神が弱ってしまう...<br>
+　　　　　　　　　　　　　　　　　　　　　　　　　そして、化学クラブの生徒より、冷蔵庫を復旧させないと理科室がヤバい...とのお告げが。<br>
+　　　　　　　　　　　　　　　　　　　　　　　　　電源の制御権を直ちに奪還せよッ！</div>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/問題3←コッチ使ってね♡.png" alt="">
             </figure>
           </div>
         </section>
