--- a/hint2.html
+++ b/hint2.html
@@ -55,7 +55,7 @@
  <!-- 2-3ヒント追加
         　　 <div class="card">
               <h3 class="card__title">2-3ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">ガラパゴスケータイ</p>
+              <p class="card__content">ひのもと</p>
             </div>
 2-3ヒント追加ここまで -->
               
