--- a/main.html
+++ b/main.html
@@ -181,7 +181,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
+              <div class="clear-message__content">さすがだ！理科室壊滅の危機を救ったね！<br>
                 次のステージの謎を解こう！</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
@@ -203,7 +203,7 @@ Youtube貼り付けここまで -->
               そして、化学クラブの生徒より、冷蔵庫を復旧させないと理科室がヤバい...とのお告げが。<br>
               電源の制御権を直ちに奪還せよッ！</div>
             <figure class="image__container">
-              <img src="assets/images/問題3←コッチ使ってね♡.png" alt="">
+              <img src="assets/images/問題3.png" alt="">
             </figure>
           </div>
         </section>
