--- a/main.html
+++ b/main.html
@@ -150,9 +150,7 @@ Youtube貼り付けここまで -->
                   <answer-input v-bind:correct="correctAnswer['stage2']['q2']" v-on:answer-input="answerInput($event, 'stage2', 2)"></answer-input>
                   <a class="link-hint" href="hint2.html" target="hint2">ヒントをみる ></a>
                 　
-                </div><!-- /.column -->
-
-2-2追加ここまで -->
+                </div>
                   
 <!-- STAGE2-3 を追加
 
