--- a/main.html
+++ b/main.html
@@ -296,7 +296,7 @@ Youtube貼り付けここまで -->
               これらを解決するための最後の謎を解いていこう！</p>
             <figure class="image__container">
               <img src="assets/images/問題5.png"alt="">
-              <img src="assets/images/問題5.png"alt="">
+              <img src="assets/images/元素周期表Ver.png"alt="">
             </figure>
           </div>
         </section>
