--- a/main.html
+++ b/main.html
@@ -34,8 +34,9 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">まずは、この学校の家庭科室の鍵のありかを知らなければ入ることができない。<br>
-              下の画像の謎を解き、鍵のありかをキーワード欄に入力しよう。</p>
+            <p class="text-center">部屋の鍵を開けろぉッ！<br>
+              このまま外に出られないと、何もすることができないッ！<br>
+              ドアの鍵を開け、生徒解放への第一歩を踏み出せッ！。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -85,9 +86,9 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">家庭科室の扉が開いた！<br>
-                さぁ先生を助けるため<br>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
+              <div class="clear-message__content">教室の扉が開いた！<br>
+                さぁ...中央玄関へ...<br>
+                しかし、電力の復旧が費用だッ！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -107,9 +108,9 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <p class="text-center">なんとか教室の部屋の鍵を開けた「カタクリズム」。<br>
+                しかし、機能が停止及び暴走した設備の話を聞いていると、近くにいた化学クラブの生徒がたじろぎ始めたッ！<br>
+                ボイラーが...爆発ッ！？</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -180,8 +181,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
-                次のステージの謎を解こう！</div>
+              <div class="clear-message__content">中央玄関はオートロック...<br>
+                照明のためにも...電力の復旧が必要だッ！...理科室がやばい？</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -199,10 +200,11 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>電力を復旧せよッ！</h2>
+              <p class="text-center">中央玄関のプロダクトキーは各部屋に隠された暗号を解くことで入手できる...<br>
+                暗いままでは生徒達の士気が下がり、精神が弱ってしまう...<br>
+                そして、化学クラブの生徒より、冷蔵庫を復旧させないと理科室がヤバい...とのお告げが。<br>
+                電源の制御権を直ちに奪還せよッ！</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -274,8 +276,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：3クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
-                次のステージの謎を解こう！</div>
+              <div class="clear-message__content">これでインフラ復旧...<br>
+                しかし、中央玄関を開けなければ...ロックがかかっているッ！?</div>
                 <button v-on:click="nextStage('stage3')" onclick="location.href='#sectionStage4'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -290,10 +292,11 @@ Youtube貼り付けここまで -->
         <!-- STAGE4-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：4</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：4</span>警備システムの停止</h2>
+            <p class="text-center">電力復旧。中央玄関に向かおうとする一同。<br>
+              しかし...警備ロボ、レーザー、サイレンッ！?警備システムが牙をむくッ！<br>
+              そこに助太刀に入ったのは...化学クラブの二人!?「食い止めてる間に早く解け!」<br>
+            二人もそんなに持たないかもしれない...早く謎を解けッ！</p>
             <figure class="image__container">
               <img src="assets/images/問題5.png"alt="">
               <img src="assets/images/元素周期表Ver.png"alt="">
