--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>教室に...鍵が...ッ！</h2>
             <p class="text-center">部屋の鍵を開けろぉッ！<br>
               このまま外に出られないと、何もすることができないッ！<br>
               ドアの鍵を開け、生徒解放への第一歩を踏み出せッ！。</p>
@@ -86,9 +86,9 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">教室の扉が開いた！<br>
-                さぁ...中央玄関へ...<br>
-                しかし、電力の復旧が費用だッ！</div>
+              <div class="clear-message__content">なんとか教室の部屋の鍵を開けた「カタクリズム」。<br>
+                しかし、機能が停止及び暴走した設備の話を聞いていると、近くにいた化学クラブの生徒がたじろぎ始めたッ！<br>
+                ボイラーが...爆発ッ！？</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -107,10 +107,11 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">なんとか教室の部屋の鍵を開けた「カタクリズム」。<br>
-                しかし、機能が停止及び暴走した設備の話を聞いていると、近くにいた化学クラブの生徒がたじろぎ始めたッ！<br>
-                ボイラーが...爆発ッ！？</p>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ボイラーを止めよ！</h2>
+              <p class="text-center">ボイラーが爆発ッ！?<br>
+                このままだと学校が吹っ飛んで死傷者が出てしまうッ！
+                しかし、爆発を防ぐためにはガスと水道を止めなければならないようだ...<br>
+                至急止めにゆけッ！</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -181,7 +182,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">中央玄関はオートロック...<br>
+              <div class="clear-message__content">これは、中央玄関の会場に必要なプロダクトキーッ！?<br>
+                しかし、中央玄関はオートロック...今のままでは開けられない...<br>
                 照明のためにも...電力の復旧が必要だッ！...理科室がやばい？</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
