--- a/hint4.html
+++ b/hint4.html
@@ -38,12 +38,12 @@
     <!-- STAGE2ヒント　ここから -->
     <section id="stage4" class="section bg-color--gray">
       <div class="container">
-        <h2 class="section-title section-title--keycolor">STAGE：2</h2>
+        <h2 class="section-title section-title--keycolor">STAGE：4</h2>
         <div class="row">
           <div class="column">
             <div class="card">
-              <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <h3 class="card__title">更なるヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
+              <p class="card__content">この暗号だと『あ』はNaになる</p>
             </div>
               
  <!-- 2-2ヒント追加
