--- a/hint2.html
+++ b/hint2.html
@@ -49,7 +49,7 @@
               <h3 class="card__title">2-2ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
               <p class="card__content">スマホの文字打つときはどうする？</p>
             </div>
-2-2ヒント追加ここまで -->
+
 
  <!-- 2-3ヒント追加
         　　 <div class="card">
@@ -66,10 +66,10 @@
             </div>
               
             <div class="card">
-              <h3 class="card__title">2-2答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">すいどう</p>
+              <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
+              <p class="card__content">こっちは考えてみよう！</p>
             </div>
-2-2答え追加ここまで -->
+
               
 <!-- 2-3答え追加          
             <div class="card">
