--- a/hint3.html
+++ b/hint3.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">何かをスライドさせる</p>
+              <p class="card__content">1つや２つは文字の番号だぞ五目並べはいいぞ</p>
             </div>
               
  <!-- 3-2ヒント追加
