--- a/final.html
+++ b/final.html
@@ -65,8 +65,12 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                グラフィック：家栗<br>
+                問題作成：かいふくちょー,家栗<br>
+                サイト作成：ピヨ助、燕青<br>
+                スペシャルサンクス：柏キャンパスの皆さん<br>
+                制作 チームaiueo<br>
+              </p>
             </div>
           </div>
         </div>
