--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/問題1←コッチ使ってね♡.png" alt="">
+                <img src="assets/images/問題1Ver.2.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
@@ -227,7 +227,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE3-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/問題3←コッチ使ってね♡.png" alt="">
+                    <img src="assets/images/問題3Ver.2.png" alt="">
                   </figure>
                   <!-- STAGE3-1問題セクション　ここまで -->
                   <!-- STAGE3-1解答入力セクション　ここから -->
