--- a/hint4.html
+++ b/hint4.html
@@ -43,7 +43,8 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">更なるヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">この暗号だと『あ』はNaになる</p>
+              <p class="card__content">この暗号だと『か』はScになる<br>
+              周期表の赤くなっている部分はキリのいい10の倍数だ</p>
             </div>
               
  <!-- 2-2ヒント追加
