--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="電機学園と四つの装置"></h1>
+    <h1 class="main-title"><img src="assets/images/メインのイメージ.png" alt="電機学園と四つの装置"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
