--- a/hint4.html
+++ b/hint4.html
@@ -24,7 +24,7 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/メインのイメージ.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/メインのイメージ.png" alt="電機学園と四つの装置"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
