--- a/hint4.html
+++ b/hint4.html
@@ -65,7 +65,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">いいい</p>
+              <p class="card__content">けいびとめる</p>
             </div>
               
 <!-- 2-2答え追加
