--- a/main.html
+++ b/main.html
@@ -34,9 +34,9 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>教室に...鍵が...ッ！</h2>
-            <p class="text-center">部屋の鍵を開けろぉッ！<br>
-              このまま外に出られないと、何もすることができないッ！<br>
-              ドアの鍵を開け、生徒解放への第一歩を踏み出せッ！。</p>
+            <p class="text-center">教室の鍵を開けなければならない...<br>
+              あるのは目の前に写されている問題だけ。<br>
+              本当にこの問題を解けば部屋を出られるのだろうか...</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -110,8 +110,7 @@ Youtube貼り付けここまで -->
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ボイラーを止めよ！</h2>
               <p class="text-center">ボイラーが爆発ッ！?<br>
                 このままだと学校が吹っ飛んで死傷者が出てしまうッ！
-                しかし、爆発を防ぐためにはガスと水道を止めなければならないようだ...<br>
-                至急止めにゆけッ！</p>
+                しかし、爆発を防ぐためにはガスと水道を止めなければならないようだ...</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -182,9 +181,9 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">これは、中央玄関の会場に必要なプロダクトキーッ！?<br>
-                しかし、中央玄関はオートロック...今のままでは開けられない...<br>
-                照明のためにも...電力の復旧が必要だッ！...理科室がやばい？</div>
+              <div class="clear-message__content">ボイラーを止めてひとまず安心。<br>
+                しかし、中央玄関はオートロック...電力がなくては開けられない...<br>
+                照明のためにも...電力の復旧が必要だッ！...</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -203,10 +202,10 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>電力を復旧せよッ！</h2>
-              <p class="text-center">中央玄関のプロダクトキーは各部屋に隠された暗号を解くことで入手できる...<br>
-                暗いままでは生徒達の士気が下がり、精神が弱ってしまう...<br>
-                そして、化学クラブの生徒より、冷蔵庫を復旧させないと理科室がヤバい...とのお告げが。<br>
-                電源の制御権を直ちに奪還せよッ！</p>
+              <p class="text-center">とりあえず照明がないと、とのことなので電力を復旧する。<br>
+                そして、中央玄関はオートロック。電気がないと開けられない。<br>
+                そして、化学クラブの生徒より、冷蔵庫を復旧させないと理科室がヤバい...と。<br>
+                そりゃ、化学クラブにとっては理科室がホームだもんね。</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -279,7 +278,7 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：3クリア！</div>
               <div class="clear-message__content">これでインフラ復旧...<br>
-                しかし、中央玄関を開けなければ...ロックがかかっているッ！?</div>
+                中央玄関へ向かい、鍵を開けるそれだけだ。</div>
                 <button v-on:click="nextStage('stage3')" onclick="location.href='#sectionStage4'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -296,9 +295,9 @@ Youtube貼り付けここまで -->
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：4</span>警備システムの停止</h2>
             <p class="text-center">電力復旧。中央玄関に向かおうとする一同。<br>
-              しかし...警備ロボ、レーザー、サイレンッ！?警備システムが牙をむくッ！<br>
-              そこに助太刀に入ったのは...化学クラブの二人!?「食い止めてる間に早く解け!」<br>
-            二人もそんなに持たないかもしれない...早く謎を解けッ！</p>
+              しかし...警備ロボッ！?こんなにもッ！そこに助太刀に入ったのは...化学クラブの二人!?<br>
+              しかも...変身したッ！？　なんなんだ化学クラブは...<br>
+            ここはあの黄色と緑の二人に任せよう...早く謎を解くッ！</p>
             <figure class="image__container">
               <img src="assets/images/問題5.png"alt="">
               <img src="assets/images/元素周期表Ver.png"alt="">
