--- a/final.html
+++ b/final.html
@@ -17,14 +17,14 @@
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/メインのイメージ.png" alt="電機学園と四つの装置"></h1>
+    <h1 class="main-title"><img src="assets/images/main-image.png" alt="電機学園と四つの装置"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、学校から出られた!<br>
+            そこにいたのは犯人・・・正体は...校長先生ッ！？</p>
         </div>
       </div>
     </section>
@@ -41,18 +41,26 @@
               </div>
             </div>
 Youtube貼り付けここまで-->
-          ß
+          
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">「校長先生...なぜそこにいるんですかッ！?」<br>
+          「実は、今回の事件は全て私の仕組んだことだ。」<br>
+          「また...なんでそんなことを？」<br>
+          「これはテストだ。君たちならクリアできると思っていた。だが、科学クラブの装備が出てきたり警備システムに関しては想定外だった。」<br>
+          「でもボイラーが...!」<br>
+          「あれは部屋の構造が爆発してもそんなに被害が出ないようになっている。理科室の冷蔵庫も然り」<br>
+          「でも、ほんとに私たちは怖かったんですよ!!」<br>
+          「...]<br>
+      「今回のこと、しっかり責任とってください。」</p>
+        <p class="text-center">数日後。校長は辞めさせられ、今までの副校長が校長になった。<br>
+      今でもあれは夢だったのではないかと思う。でも、CATACLYSMにいる限りこういうことに対処しなくてはいけないかもしれない。<br>
+      そう思って、自販機で水を買って飲み、理科室にあの装備の主おさいを聞きにいくことにした。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
       <div class="container">
-        <h2 class="section-title">遊んでくれてありがとう！</h2>
+        <h2 class="section-title">電機学園と四つの装置　〜完〜</h2>
         <p class="font-eng text-center">Special Thanks</p>
         <div class="row">
           <div class="column">
