--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
         <div class="story">
           <p class="text-center">ここは国立電機学園・・・<br>
             学校の設備がLOTによって管理されており、IT関連の勉強をしにくる生徒も多い…<br>
-            だがしかしッ！それは表の顔…裏の顔は天才ホワイトハッカー組織「カタクリズム」のために作られた学校だったッ！<br>
-            そんな日々、世界の平和を陰ながら守っているカタクリズムに問題がッ!?<br>
+            だがしかしッ！それは表の顔…裏の顔は天才ホワイトハッカー組織「CATACLYSM」のために作られた学校だったッ！<br>
+            そんな日々、世界の平和を陰ながら守っているCATACLYSMに問題がッ!?<br>
             ーとある昼下がりー<br>
             生徒たちは何の変哲もない日々を過ごしていた…<br>
-            すると突然！電気が消え、ドアに鍵がかかったッ！<br>
-            どうする、我らの「カタクリズム」ッ！！<br>
-          さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
+            すると突然、電気が消え、ドアに鍵がかかったッ！<br>
+            パソコンの画面には謎の人物。<br>
+          　　「解放して欲しければ、私の隠した四つの謎を解け。」<br>
+            CATACLYSMに入ったはいいが、　こういうのは初めてだ。燃えてきた。
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-          <p class="text-center">学校から解放せよ！！<br>
+          <p class="text-center">学校を解放せよ！！<br>
             まずはこの暗号を解かなくては！</p>
         </div>
       </div>
@@ -48,7 +49,7 @@
     <section class="section bg-color--gray">
       <div class="container">
         <h2 class="section-title">ゲーム開始前の準備</h2>
-        <p class="font-eng text-center">Are you ready for game?</p>
+        <p class="font-eng text-center">Are you ready ?</p>
         <!--
           class名"row"内のclass名"column"が横並びになります。
           改行する場合は以下のように追加してください。
