--- a/final.html
+++ b/final.html
@@ -54,8 +54,8 @@ Youtube貼り付けここまで-->
           「...]<br>
       「今回のこと、しっかり責任とってください。」</p>
         <p class="text-center">数日後。校長は辞めさせられ、今までの副校長が校長になった。<br>
-      今でもあれは夢だったのではないかと思う。でも、CATACLYSMにいる限りこういうことに対処しなくてはいけないかもしれない。<br>
-      そう思って、自販機で水を買って飲み、理科室にあの装備の主おさいを聞きにいくことにした。</p>
+      今でもあれは夢だったのではないかと思う。でも、CATACLYSMにいる限りこれからもこういうことに対処しなくてはいけないかもしれない。<br>
+      そう思って、自販機で水を買って飲み、理科室にあの装備の詳細を聞きにいくことにした。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
