--- a/main.html
+++ b/main.html
@@ -34,6 +34,7 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>教室に...鍵が...ッ！</h2>
+            <img src="assets/images/供出！脱出！.png" alt="">
             <p class="text-center">教室の鍵を開けなければならない...<br>
               あるのは目の前に写されている問題だけ。<br>
               本当にこの問題を解けば部屋を出られるのだろうか...</p>
@@ -108,6 +109,7 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ボイラーを止めよ！</h2>
+              <img src="assets/images/ボイラー.png" alt="">
               <p class="text-center">ボイラーが爆発ッ！?<br>
                 このままだと学校が吹っ飛んで死傷者が出てしまうッ！
                 しかし、爆発を防ぐためにはガスと水道を止めなければならないようだ...</p>
@@ -202,6 +204,7 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>電力を復旧せよッ！</h2>
+              <img src="assets/images/でんりよく.png" alt="">
               <p class="text-center">とりあえず照明がないと、とのことなので電力を復旧する。<br>
                 そして、中央玄関はオートロック。電気がないと開けられない。<br>
                 そして、化学クラブの生徒より、冷蔵庫を復旧させないと理科室がヤバい...と。<br>
@@ -294,6 +297,7 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：4</span>警備システムの停止</h2>
+            <img src="assets/images/けいびとめる.png" alt="">
             <p class="text-center">電力復旧。中央玄関に向かおうとする一同。<br>
               しかし...警備ロボッ！?こんなにもッ！そこに助太刀に入ったのは...化学クラブの二人!?<br>
               しかも...変身したッ！？　なんなんだ化学クラブは...<br>
