--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   </svg>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="assets/images/logo.svg" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
@@ -30,7 +29,7 @@
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
           <p class="text-center">ここは国立電機学園・・・<br>
-            学校の設備がLOTによって管理されており、IT関連の勉強をしにくる生徒も多い…<br>
+            学校の設備がIotによって管理されており、IT関連の勉強をしにくる生徒も多い…<br>
             だがしかしッ！それは表の顔…裏の顔は天才ホワイトハッカー組織「CATACLYSM」のために作られた学校だったッ！<br>
             そんな日々、世界の平和を陰ながら守っているCATACLYSMに問題がッ!?<br>
             ーとある昼下がりー<br>
