--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             CATACLYSMに入ったはいいが、　こういうのは初めてだ。燃えてきた。
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-          <p class="text-center">学校を解放せよ！！<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">現実なんだよな...<br>
+            とりあえず指示に従ってみよう。</p>
         </div>
       </div>
     </section>
